Fix overflow of map component

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -268,7 +268,7 @@ magdagdag lang kayo dito */
     width: 50px;
     height: 50px;
     margin-bottom: 5px;
-    margin-left: 20px;
+    margin-left: 15px;
 }
 
 /* -----STICKY NAVBAR */
@@ -351,7 +351,7 @@ magdagdag lang kayo dito */
 
 /* -----IMAGES */
 .navbarLogo {
-    margin: 8px 20px 0px 20px;
+    margin: 8px 20px 0px 10px;
     width: 60px;
     height: 60px;
 }
@@ -512,7 +512,7 @@ magdagdag lang kayo dito */
 }
 
 .map {
-    width: 400px;
+    width: 90%;
     height: 400px;
 }
 
